feat: add recurring social partner API
